tests/neg/Lib.spec
module spec Lib where

foo :: a:{v:t | false} -> t
